[gd_scene load_steps=10 format=3 uid="uid://dl73eu40u43g3"]

[ext_resource type="Script" path="res://main.gd" id="1_64hq7"]
[ext_resource type="PackedScene" uid="uid://ug3rs383rd8g" path="res://Scenes/game.tscn" id="2_crre5"]
[ext_resource type="PackedScene" uid="uid://dmf2jvpn51pcb" path="res://Scenes/title.tscn" id="2_wg4dh"]
[ext_resource type="PackedScene" path="res://Scenes/sound_manager.tscn" id="4_fnrpf"]
[ext_resource type="PackedScene" uid="uid://ddxyctbu73y41" path="res://Scenes/win.tscn" id="5_0f5pv"]
[ext_resource type="PackedScene" uid="uid://cq0x5rro62jgf" path="res://Scenes/loose.tscn" id="6_vyvqw"]

[sub_resource type="Animation" id="Animation_xkslq"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Title:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Title:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_56c8v"]
resource_name = "fade_title"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Title:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Title:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.6),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_u0t77"]
_data = {
"RESET": SubResource("Animation_xkslq"),
"fade_title": SubResource("Animation_56c8v")
}

[node name="Main" type="Node" node_paths=PackedStringArray("current_game_scene", "title_screen", "sound_manager")]
script = ExtResource("1_64hq7")
current_game_scene = NodePath("Game")
title_screen = NodePath("Title")
sound_manager = NodePath("SoundManager")

[node name="Title" parent="." instance=ExtResource("2_wg4dh")]

[node name="Game" parent="." node_paths=PackedStringArray("sound_manager") instance=ExtResource("2_crre5")]
sound_manager = NodePath("../SoundManager")

[node name="SoundManager" parent="." instance=ExtResource("4_fnrpf")]

[node name="Win" parent="." instance=ExtResource("5_0f5pv")]
visible = false

[node name="Lose" parent="." instance=ExtResource("6_vyvqw")]
visible = false

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_u0t77")
}

[connection signal="pressed" from="Title/VBoxContainer/Start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="Title/VBoxContainer/Credits" to="." method="_on_credits_pressed"]
[connection signal="pressed" from="Title/VBoxContainer/GitHub" to="." method="_on_git_hub_pressed"]
[connection signal="pressed" from="Title/VBoxContainer/HowToPlay" to="." method="_on_how_to_play_pressed"]
[connection signal="pressed" from="Title/VBoxContainer/Exit" to="." method="_on_exit_pressed"]
[connection signal="pressed" from="Title/HowToPlay/HideButton" to="." method="_on_hide_button_pressed"]

[editable path="Title"]
